--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,6 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
+  <div class="floating"></div>
 
 </article>
