--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-
 <div class="home">
 
   <h1 class="page-heading">Posts</h1>
@@ -14,7 +13,8 @@ layout: default
         <h2>
           <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
         </h2>
-        {{ post.excerpt }}
+        <p>{{ post.excerpt }}</p>
+        <p><a href="{{ pose.url | prepend: site.baseurl }}">Read More...</a></p>
       </li>
     {% endfor %}
   </ul>
