[Jekyll Blog] 1. Modified the post content from wordpress 2. Add post.excerpt 3. Edit home.html post permalink 4. Add assets folder

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
           <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
         </h2>
         <p>{{ post.excerpt }}</p>
-        <p><a href="{{ pose.url | prepend: site.baseurl }}">Read More...</a></p>
+        <p><a href="{{ post.url | prepend: site.baseurl }}">Read More...</a></p>
       </li>
     {% endfor %}
   </ul>
